--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-tabs-content-holder {
+  overflow: scroll;
+  scrollbar-width: none;
+}
