refactor: 重构操作区样式 && 组件配置 store

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
   overflow: scroll;
   scrollbar-width: none;
 }
+
+.ant-tabs-tab {
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.ant-tabs-nav-list {
+  width: 100%;
+}
